# nanokwant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  example.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  docs.yml
docs/: api.md  index.md
docs/user-guide/: getting-started.md  scattering.md
src/nanokwant/: __init__.py  nanokwant.py  scattering.py
tests/: test_nanokwant.py  test_scattering.py
