[project]
authors = [{name = "Anton Akhmerov", email = "anton.akhmerov@gmail.com"}]
dependencies = []
name = "nanokwant"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nanokwant = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
matplotlib-base = ">=3.10.1,<4"
ipykernel = ">=6.29.5,<7"
pytest = ">=8.3.5,<9"
ruff = ">=0.9.9,<0.10"
ipython = ">=9.0.0,<10"
pre-commit = ">=4.1.0,<5"
kwant = ">=1.5.0,<2"

[tool.ruff]
# Allow single-letter variable `l` used intentionally for lower bandwidth
extend-ignore = ["E741"]
