[project]
authors = [{name = "Anton Akhmerov", email = "anton.akhmerov@gmail.com"}]
name = "nanokwant"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nanokwant = { path = ".", editable = true }
mkdocs-execute-plugin = ">=0.0.9, <0.0.10"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"
kwant = ">=1.5.0,<2"
matplotlib-base = ">=3.10.1,<4"
pytest = ">=8.3.5,<9"
# Testing and linting
ruff = ">=0.9.9,<0.10"
pre-commit = ">=4.1.0,<5"
pytest-randomly = ">=3.15.0,<4"
# Docs
mkdocs-material = ">=9.5.0,<10"
nbconvert = ">=7.16.6,<8"
ipykernel = ">=7.1.0,<8"
jupytext = ">=1.18.1,<2"

[tool.ruff.lint]
# Allow single-letter variable `l` used intentionally for lower bandwidth
extend-ignore = ["E741"]
